12-08-conf-k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: 12-08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 80
            name: http-nginx
        volumeMounts:
          - name: nginx-index
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 11443
            name: https-multitool
      volumes:
      - name: nginx-index
        configMap:
          name: ng-index

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: 12-08
spec:
  selector:
    app: nginx
  ports:
  - name: nginx-http
    protocol: TCP
    port: 80
    targetPort: http-nginx
